--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^10.16.4",
     "maath": "^0.10.4",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0"
