--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.16.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0"
